--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link href="<%= htmlWebpackPlugin.options.fav %>" rel="shortcut icon" type="images/x-icon">
+    <link href="//at.alicdn.com/t/font_591024_p89sr5ge77h.css" rel="stylesheet">
 </head>
 <body>
 <div id="root" style="height: 100%"></div>
